CT/coursework-2-JacobInwald/tests/type-checking/custom/return.choc
# RUN: choco-opt -p check-assign-target,name-analysis,type-checking %s | filecheck %s

return

# CHECK: Semantic error: 